input file/time support

--- a/test.html
+++ b/test.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200;300;500;600;700&display=swap" rel="stylesheet">
     <link href="./cyberpunk-2077.css" rel="stylesheet">
-     <meta property="og:image" content="https://theflash.gwannon.com/Cyberpunk-2077-theme-css/example2.png">
-    <style>
-    </style>
   </head>
   <body>
     <header style="background-color: #000; height: 50px;"><a href="https://github.com/gwannon/Cyberpunk-2077-theme-css" style="color: #f9f002; font-size: 2rem;">Github</a></header>
@@ -34,6 +31,8 @@
       <form style="max-width: 500px">
         <input class="cyberpunk" type="text" />
         <input class="cyberpunk" type="date" />
+        <input class="cyberpunk" type="time" />
+        <input class="cyberpunk" type="file" />        
         <input class="cyberpunk" type="phone" />
         <input class="cyberpunk" type="number" />
         <input class="cyberpunk" type="password" />
@@ -73,22 +72,22 @@
         <li class="glitched">featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
         <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
-        <li class="glitched">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
         <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
-        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
       </ul>
       <p class="cyberpunk inverse scannedv">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
       <p class="cyberpunk inverse dotted scannedh">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
       <ol class="cyberpunk">
         <li>Cyberpunk is a subgenre of science fiction in a dystopian <a href="#">futuristic setting that</a> tends to focus on a "combination of low-life and high tech"</li>
         <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
-        <li class="glitched">Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
-        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
-        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
-        <li class="glitched">featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
         <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
+        <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
       </ol>
     </section>
     <section class="cyberpunk">
@@ -100,10 +99,10 @@
         <li class="glitched">featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
         <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
-        <li class="glitched">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
+        <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
         <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
-        <li class="glitched">Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
-        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
       </ul>
       <p class="cyberpunk inverse">Cyberpunk is a subgenre of science fiction in a dystopian <a href="#">futuristic setting that</a> tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
       <p class="cyberpunk inverse scannedh">Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"[1] featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.[2] Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</p>
@@ -112,18 +111,20 @@
       <ol class="cyberpunk">
         <li>Cyberpunk is a subgenre of science fiction in a dystopian <a href="#">futuristic setting that</a> tends to focus on a "combination of low-life and high tech"</li>
         <li>featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
-        <li class="glitched">Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
-        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li >Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
         <li>Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"</li>
         <li class="glitched">featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order.</li>
         <li>Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology,</li>
-        <li class="glitched">and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
+        <li>and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.</li>
       </ol>
     </section>
     <section class="cyberpunk black">
       <form style="max-width: 500px">
         <input class="cyberpunk" type="text" />
         <input class="cyberpunk" type="date" />
+        <input class="cyberpunk" type="time" />
+        <input class="cyberpunk" type="file" />  
         <input class="cyberpunk" type="phone" />
         <input class="cyberpunk" type="number" />
         <input class="cyberpunk" type="password" />
