--- a/test.html
+++ b/test.html
@@ -10,10 +10,10 @@
   <body>
     <header style="background-color: #000; height: 50px;"><a href="https://github.com/gwannon/Cyberpunk-2077-theme-css" style="color: #f9f002; font-size: 2rem;">Github</a></header>
     <section class="cyberpunk"> 
-      <a class="cyberpunk2077">Link red_</a>
-      <button class="cyberpunk2077 green">Button green_</button>
-      <a class="cyberpunk2077 purple">Link purple_</a>
-      <button class="cyberpunk2077 blue">Button blue_</button>
+      <a class="cyberpunk">Link red_</a>
+      <button class="cyberpunk green">Button green_</button>
+      <a class="cyberpunk purple">Link purple_</a>
+      <button class="cyberpunk blue">Button blue_</button>
     </section>
     <section class="cyberpunk black">
       <h1 class="cyberpunk">H1 title</h1>
@@ -46,7 +46,7 @@
         <label class="cyberpunk"><input class="cyberpunk" name="test" type="radio" checked="checked" /> RADIO BUTTON Lorem ipsum sid amet.</label><br/>
         <label class="cyberpunk"><input class="cyberpunk" type="checkbox" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
         <label class="cyberpunk"><input class="cyberpunk" type="checkbox" checked="checked" /> CHECKBOX Lorem ipsum sid amet.</label><br/>
-        <button type="submit" class="cyberpunk2077 red">Submit_</button>
+        <button type="submit" class="cyberpunk red">Submit_</button>
       </form>
     </section>
     <section class="cyberpunk black">
