--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <title>Cyberpunk-2077-theme-css</title>
     <meta name="description" content="This is a theme in CSS3 to simulate the interfaxes of the game CyberPunk 2077.">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200;300;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;700&family=VT323&display=swap" rel="stylesheet">
     <link href="./cyberpunk-2077.css" rel="stylesheet">
   </head>
   <body>
@@ -144,6 +144,258 @@
     <section class="cyberpunk">
       <img class="cyberpunk" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
       <img class="cyberpunk dotted" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
+    </section>
+    <section class="cyberpunk black">
+      <div class="boxtree">
+        <div class="resolved children2 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children2 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children2 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="pending children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children2 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="pending children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="resolved children1 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children2 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="resolved children1 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children0 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+      </div>
+    </section>
+    <section class="cyberpunk">
+      <div class="boxtree">
+        <div class="resolved children2 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children2 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children2 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="pending children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children2 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width3">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="pending children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="resolved children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="resolved children1 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children2 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="resolved children1 width2" style="--resolved-text: '';">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="children1 width2">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+       </div>
+        <div class="resolved children1 width1" style="--resolved-text: 'FINISHED';">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children1 width1">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+        <div class="pending children0 width1" style="--pending-text: 'FORBIDDEN';">
+          <h2>Lorem ipsum sid amet.</h2>
+          Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a "combination of low-life and high tech"
+        </div>
+      </div>
+    </section>
+    <section class="cyberpunk black">
+      <ul class="steps">
+        <li>Text 1</li>
+        <li>Text extra extra large 2</li>
+        <li>Texto 3</li>
+        <li>Text extra extra large 4 </li>
+        <li>Text 5<br/>new line<br/>new line</li>
+        <li>Text large 6</li>
+        <li class="current">Text 7</li>
+        <li>Text 8</li>
+        <li>Text 9</li>
+        <li>Text 10</li>
+      </ul>
+    </section>
+    <section class="cyberpunk">
+      <ul class="steps">
+        <li>Text 1</li>
+        <li>Text extra extra large 2</li>
+        <li>Texto 3</li>
+        <li class="current">Text extra extra large 4 </li>
+        <li>Text 5<br/>new line<br/>new line</li>
+        <li>Text large 6</li>
+        <li>Text 7</li>
+        <li>Text 8</li>
+        <li>Text 9</li>
+        <li>Text 10</li>
+      </ul>
     </section>
     <aside class="cyberpunk">
       <ul>
