Section right/left transition

--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
       <a class="cyberpunk purple">Link purple_</a>
       <button class="cyberpunk blue">Button blue_</button>
     </section>
-    <section class="cyberpunk black">
+    <section class="cyberpunk black both">
       <h1 class="cyberpunk">H1 title</h1>
       <h1 class="cyberpunk glitched">H1 title glitched</h1> 
       <h2 class="cyberpunk">H2 title</h2> 
@@ -27,7 +27,7 @@
       <hr class="cyberpunk" />
       <hr class="cyberpunk glitched" />
     </section>
-    <section class="cyberpunk">
+    <section class="cyberpunk both">
       <form style="max-width: 500px">
         <input class="cyberpunk" type="text" />
         <input class="cyberpunk" type="date" />
