The sections now has lateral borders

--- a/test.html
+++ b/test.html
@@ -145,7 +145,7 @@
       <img class="cyberpunk" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
       <img class="cyberpunk dotted" src="https://dummyimage.com/600x400/ff00ff/fff" alt="" />
     </section>
-    <section class="cyberpunk black">
+    <section class="cyberpunk black both">
       <div class="boxtree">
         <div class="resolved children2 width1">
           <h2>Lorem ipsum sid amet.</h2>
@@ -257,7 +257,7 @@
         </div>
       </div>
     </section>
-    <section class="cyberpunk">
+    <section class="cyberpunk both">
       <div class="boxtree">
         <div class="resolved children2 width1">
           <h2>Lorem ipsum sid amet.</h2>
